<resources>
    <string name="app_name">Food Assistant</string>
    <string name="hello_text">Hello, there!</string>
    <string name="current_intakes_presentation_text">Here are your day\'s current nutrient intakes:</string>
    <string name="carbs_name">Carbs</string>
    <string name="sugars_name">Sugars</string>
    <string name="fats_name">Fats</string>
    <string name="saturated_fats_name">Saturated Fats</string>
    <string name="fiber_name">Fiber</string>
    <string name="salt_name">Salt</string>
    <string name="proteins_name">Proteins</string>
    <string name="scan_product_name">Scan Product</string>
    <string name="analyse_recipe_name">Analyse Recipe</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Bottom Navigation -->
    <string name="home">Home</string>
    <string name="log_meal">Log Meal</string>
    <string name="history">History</string>
    <string name="yesterday">Yesterday</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="manually_add_nutrients">Manually Add Nutrients</string>
    <string name="favorite_meals">Favorite Meals</string>
    <string name="previous_meals">Previous meals</string>
    <string name="log_meal_question">How do you want to log your meal right now?</string>
    <string name="settings">settings</string>
    <string name="title_activity_main2">MainActivity</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="nutrition_history_text">Your latest nutrition scores</string>
    <string name="logout">Logout</string>
    <string name="nutrients_setting_category_text">Nutrients to show in Dashboard:</string>

    <string name="processed_product">Product processed!</string>
    <string name="cancel">cancel</string>
    <string name="pick_product_quantity">Pick product quantity:</string>
    <string name="hello_blank_fragment">hello, blank fragment!</string>
    <string name="close">Close</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="your_favorite_products">Your favorite products</string>
    <string name="your_profile_picture">Your profile picture</string>
    <string name="calories_name">Calories</string>
    <string name="scan_product_nutritional_table_request">This product does not exist in the database. Do you want to scan the nutritional table for logging this product?</string>
    <string name="grams">grams</string>
    <string name="kcal">kcal</string>
    <string name="log_a_new_product">Log a new product</string>
    <string name="consumed_quantity">Consumed quantity</string>
    <string name="nutritional_values">Nutritional values</string>
    <string name="product_name">Product name</string>
    <string name="product_quantity">Product quantity</string>
    <string name="log_generic_food">Log generic food</string>
    <string name="nothing_to_see_here_yet">Nothing to see here yet…</string>
    <string name="add_food_item">Add food item</string>
    <string name="log_branded_product">Log branded product</string>
    <string name="log_custom_meal">Log custom meal</string>
    <string name="add_generic_food">Add Generic Food</string>
    <string name="go_back_in_time">Go back in time...</string>

</resources>