<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".LogMeal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:text="@string/log_meal_question"
        android:textSize="24sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/scan_product_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/scan_product_name"
        android:onClick="openScanProduct"/>

    <Button
        android:id="@+id/analyse_recipe_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/analyse_recipe_name" />

    <Button
        android:id="@+id/manual_add_nutrients_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/manually_add_nutrients" />

    <Button
        android:id="@+id/favorite_meals_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/favorite_meals" />

    <Button
        android:id="@+id/previous_meals_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/previous_meals" />

</LinearLayout>