<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.LogCustomMealActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:id="@+id/linearLayout_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC000000"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar_nutrient_intake"
            style="@style/Base.Widget.AppCompat.ProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_meal_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="Meal name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="Meal ingredients:"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView_no_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nothing_to_see_here_yet"
            tools:layout_editor_absoluteX="53dp"
            tools:layout_editor_absoluteY="42dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_meal_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <CheckBox
            android:id="@+id/checkBox_show_nutritional_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="toggleShowNutritionalValues"
            android:text="Show meal nutritional values" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/fragment_nutritional_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

        </androidx.fragment.app.FragmentContainerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_log_meal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="logMeal"
                android:text="Log Meal" />

            <Button
                android:id="@+id/button_save_meal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="saveMeal"
                android:text="Save meal" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout_scan_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="14dp"
            android:gravity="center_vertical"
            android:onClick="openScanProductActivity"
            android:orientation="horizontal"
            android:visibility="invisible"
            tools:visibility="visible">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/scan_product_name"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/scan_product_name"
                android:src="@drawable/ic_scan_item"
                app:backgroundTint="@android:color/holo_green_light"
                app:fabSize="mini" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_add_generic_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="70dp"
            android:gravity="center_vertical"
            android:onClick="openLogGenericFoodActivity"
            android:orientation="horizontal"
            android:visibility="invisible"
            tools:visibility="visible">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardview_light_background"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/add_generic_food"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_generic_food"
                android:onClick="openLogGenericFoodActivity"
                android:src="@drawable/ic_log_meal"
                app:backgroundTint="@android:color/holo_green_light"
                app:fabSize="mini" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="10dp"
        android:clickable="true"
        android:contentDescription="@string/add_food_item"
        android:focusable="true"
        android:onClick="toggleSubMenusFab"
        android:src="@drawable/ic_plus" />

</FrameLayout>
</ScrollView>